# grppi

./: CMakeLists.txt
doc/sycl/: enviroment_configuration.md  prerequisites.md
include/grppi/common/: configuration.h
include/grppi/dyn/: dynamic_execution.h
include/grppi/sycl/: parallel_execution_sycl.h
include/grppi/sycl/kernels/: sycl_kernel_map-reduce.h  sycl_kernel_map.h  sycl_kernel_reduce.h  sycl_kernels.h
include/grppi/sycl/util/: CustomDeviceSelector.h
samples/: CMakeLists.txt
samples/sycl/: CMakeLists.txt
samples/sycl/eval/: CMakeLists.txt  map_mandelbrot.cpp  map_mandelbrot_pure.cpp  map_reduce_float.cpp  map_reduce_float_pure.cpp  reduce_sequence.cpp  reduce_sequence_pure.cpp  simple_map.cpp
samples/sycl/eval/map_results/: mandelbrot_FPGA1.csv  mandelbrot_cpuAMD.csv  mandelbrot_cpuINTEL.csv  mandelbrot_exploration_cpuAMD.csv  mandelbrot_gpuINTEL.csv  map_results.csv  simple_map_results.csv  simple_map_results_CPU.csv  simple_map_results_GPU.csv
samples/sycl/eval/mapreduce_results/: mapreduce_cpuAMD.csv  mapreduce_cpuIntel.csv  mapreduce_fpgaIntel.csv  mapreduce_gpuIntel.csv
samples/sycl/eval/reduce_results/: reduce_cpuAMD.csv  reduce_cpuIntel.csv  reduce_fpgaIntel.csv  reduce_gpuIntel.csv
samples/sycl/map/: CMakeLists.txt
samples/sycl/map-reduce/: CMakeLists.txt
samples/sycl/map-reduce/sycl_word_count/: CMakeLists.txt  main.cpp
samples/sycl/map/sycl_add_sequences/: CMakeLists.txt  main.cpp
samples/sycl/reduce/: CMakeLists.txt
samples/sycl/reduce/sycl_add_sequence/: CMakeLists.txt  main.cpp
samples/util/: util.h
unit_tests/: map.cpp  mapreduce.cpp  reduce.cpp  supported_executions.h
